--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
         </li>
         <li class="nav-item ">
           <a href="pricing.html" class="nav-link js-scroll-trigger">
-            Pricing
+            Blog
           </a>
         </li>
 
@@ -50,8 +50,8 @@
       <ul class="ml-lg-auto list-unstyled m-0 nav-btn">
         <li><a href="contact.html" class="btn btn-primary btn-circled">Get a quote</a></li>
       </ul>
-    </div> <!-- / .navbar-collapse -->
-  </div> <!-- / .Container -->
+    </div>
+  </div>
 </nav>
 
  <router-outlet></router-outlet>
@@ -168,9 +168,7 @@
          <div class="overflow-hidden">
            <!-- Copyright -->
           <p class="footer-copy">
-            Copyright &copy; <script>var CurrentYear = new Date().getFullYear()
-            document.write(CurrentYear)
-          </script>. Designed &amp; Developed by <a class="current-year" href="https://themefisher.com/">Themefisher</a>
+            Copyright &copy; 2024. Designed &amp; Developed by <a class="current-year" href="https://justinbarlowe.com">Justin Barlowe</a>
           </p>
          </div>
        </div>
