--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,17 +19,17 @@
           </a>
         </li>
         <li class="nav-item ">
-          <a href="about.html" class="nav-link js-scroll-trigger">
+          <a routerLink="about" class="nav-link js-scroll-trigger">
             About
           </a>
         </li>
         <li class="nav-item ">
-          <a href="service.html" class="nav-link js-scroll-trigger">
+          <a routerLink="" class="nav-link js-scroll-trigger">
             Services
           </a>
         </li>
         <li class="nav-item ">
-          <a href="pricing.html" class="nav-link js-scroll-trigger">
+          <a routerLink="blog" class="nav-link js-scroll-trigger">
             Blog
           </a>
         </li>
@@ -64,11 +64,9 @@
        <div class="col-lg-4 col-sm-12">
          <div class="footer-widget">
            <!-- Brand -->
-           <a href="index.html" class="footer-brand text-white">
-             Rappo
+           <a routerLink="home" class="footer-brand text-white">
+             Archers Lawn and Pest
            </a>
-           <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum
-             dolor sit amet, consectetur adipisicing elit.</p>
          </div>
        </div>
 
@@ -168,7 +166,7 @@
          <div class="overflow-hidden">
            <!-- Copyright -->
           <p class="footer-copy">
-            Copyright &copy; 2024. Designed &amp; Developed by <a class="current-year" href="https://justinbarlowe.com">Justin Barlowe</a>
+            Copyright &copy; 2024. Designed &amp; Developed by <a href="https://justinbarlowe.com">Justin Barlowe</a> & <a href="">Darrk Ether Studios</a>
           </p>
          </div>
        </div>
