--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,21 +5,21 @@
               <div class="contact-info-block text-center">
                   <i class="pe-7s-map-marker"></i>
                   <h4>Address</h4>
-                  <p class="lead">153 Williamson Plaza, 09514</p>
+                  <p class="lead">123 Street Dr, City, State</p>
               </div>
           </div>
           <div class="col-lg-4 col-sm-6 col-md-6">
               <div class="contact-info-block text-center">
                   <i class="pe-7s-mail"></i>
                   <h4>Email</h4>
-                  <p class="lead">supportdb@dthememascot.com</p>
+                  <p class="lead">support@archerslawn.com</p>
               </div>
           </div>
           <div class="col-lg-4 col-sm-6 col-md-6">
               <div class="contact-info-block text-center">
                   <i class="pe-7s-phone"></i>
                   <h4>Phone Number</h4>
-                  <p class="lead">+23-68017684</p>
+                  <p class="lead">123-456-7890</p>
               </div>
           </div>
       </div>
@@ -30,16 +30,11 @@
   <div class="container">
       <div class="row mb-4">
           <div class="col-md-8 col-lg-6">
-              <h5>Leave a Message</h5>
+              <h5>Send us a message!</h5>
               <!-- Heading -->
               <h2 class="section-title mb-2 ">
                   Tell us about <span class="font-weight-normal">yourself</span>
               </h2>
-
-              <!-- Subheading -->
-              <p class="mb-5 ">
-                  Whether you have questions or you would just like to say hello, contact us.
-              </p>
 
           </div>
       </div> <!-- / .row -->
@@ -99,7 +94,7 @@
                               </label>
 
                               <div class="input-group">
-                                  <input class="form-control" name="subject" id="subject" required="" placeholder="Web design" type="text">
+                                  <input class="form-control" name="subject" id="subject" required="" placeholder="Quote" type="text">
                               </div>
                           </div>
                       </div>
@@ -143,7 +138,12 @@
 
           <div class="col-lg-6 col-md-6">
               <!-- START MAP -->
-              <div id="map" ></div>
+              <div id="map" >
+
+                <div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Greensboro,%20NC+(Archers%20Lawn%20and%20Pest)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+
+
+              </div>
               <!-- END MAP -->
           </div>
       </div>
